# DataQ

./: .betterleaks.toml  .betterleaksignore  .dockerignore  .env.app.example  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.ghcr.yml  docker-compose.yml  environment.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt
.claude/: settings.json
.claude/agents/: docs-consistency-guard.md  migration-safety.md  orchestration-abstraction-guard.md  qa-verifier.md  ui-tester.md
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  security.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml  publish-images.yml
00/ac7aa0bbd4/: metadata.json
01/1d38f06b38/: metadata.json
01/32f41ab80a/: metadata.json
01/888e912574/: metadata.json
02/a6b4119dab/: metadata.json
02/ca37d6537d/: metadata.json
03/166c0032aa/: metadata.json
03/52065eb279/: metadata.json
03/5d551bab61/: metadata.json
04/305ec3902d/: metadata.json
04/8337d9fe90/: metadata.json
04/a93add5f72/: metadata.json
04/efe2b2ad03/: metadata.json
04/fb061b0c8a/: metadata.json
05/78f37d4595/: metadata.json
05/d1dc30f813/: metadata.json
06/0921381fbe/: metadata.json
06/14ae9ca166/: metadata.json
06/72193dd707/: metadata.json
06/79c283efc1/: metadata.json
06/ac3f0dbe30/: metadata.json
06/d46e62725f/: metadata.json
06/ef91fbaddf/: metadata.json
07/4543319a8e/: metadata.json
07/f6b34a8b86/: metadata.json
08/0b67d15a83/: metadata.json
08/cbcd6bfa0f/: metadata.json
08/e460ad7e5f/: metadata.json
08/f775297d64/: metadata.json
09/0e6e0f5a25/: metadata.json
09/1343df4dec/: metadata.json
0a/2ce4ab3518/: metadata.json
0a/63d381b547/: metadata.json
0a/b1ac728900/: metadata.json
0b/75c9c592ea/: metadata.json
0b/78d74033f5/: metadata.json
0b/8028737c44/: metadata.json
0c/4b1f02b206/: metadata.json
0c/dff5106668/: metadata.json
0d/42646e36cc/: metadata.json
0d/68d65bb00b/: metadata.json
0e/89bb22fd01/: metadata.json
0e/b969e861c4/: metadata.json
0e/cbc5a8756a/: metadata.json
0f/17ede90d3a/: metadata.json
0f/280385c151/: metadata.json
10/07e1941e09/: metadata.json
10/188e714614/: metadata.json
10/68565b9f56/: metadata.json
10/a370608dc3/: metadata.json
10/b260c719a7/: metadata.json
10/cf0a57d3f9/: metadata.json
10/d3823d2399/: metadata.json
12/c171c71ce5/: metadata.json
12/f6696bef36/: metadata.json
13/1c42f817a4/: metadata.json
13/3bba4baca8/: metadata.json
13/48edfd504f/: metadata.json
13/86dc121340/: metadata.json
13/b71774205e/: metadata.json
14/9685e5a901/: metadata.json
14/bb73293d2a/: metadata.json
14/c6f5e33ea8/: metadata.json
14/dcb11ca125/: metadata.json
15/038d6bb46f/: metadata.json
15/215f11e25c/: metadata.json
15/30831eab15/: metadata.json
15/f85460ebf5/: metadata.json
16/09aa6d6d30/: metadata.json
16/1a9431f5bd/: metadata.json
16/4e32138734/: metadata.json
16/9dde35a657/: metadata.json
17/147c8ac743/: metadata.json
17/4e1211d625/: metadata.json
17/93ec08c8e5/: metadata.json
18/711532f9d7/: metadata.json
18/746ecafa73/: metadata.json
18/952739315a/: metadata.json
18/96131cd81f/: metadata.json
18/9769e0b3f8/: metadata.json
19/55e4fb7c80/: metadata.json
1a/2a521b33a9/: metadata.json
1a/4774a85eda/: metadata.json
1a/4d89f39348/: metadata.json
1a/94e204ef72/: metadata.json
1a/967c74ade3/: metadata.json
1b/0a0ad73674/: metadata.json
1b/1f4e4087a9/: metadata.json
1b/5acd7db797/: metadata.json
1b/91470404c3/: metadata.json
1c/6a25e8e30e/: metadata.json
1c/aee0e08a31/: metadata.json
1c/b7f3ea824b/: metadata.json
1c/e4c63f3d42/: metadata.json
1d/1770a84924/: metadata.json
1d/48f4a378a6/: metadata.json
1d/6381467376/: metadata.json
1d/6eab9e2a04/: metadata.json
1d/82e498ce1a/: metadata.json
1d/906229e4be/: metadata.json
1f/0d36e4018e/: metadata.json
1f/383fd999f1/: metadata.json
1f/5d5504b18a/: metadata.json
1f/81698cc991/: metadata.json
1f/a31c652aff/: metadata.json
1f/adeb917f4f/: metadata.json
20/62fa021949/: metadata.json
20/b0f0c5de68/: metadata.json
20/c1dc53fe80/: metadata.json
21/1c93fac9e0/: metadata.json
21/70194f5884/: metadata.json
21/eafe36a2b7/: metadata.json
22/5b99b13f20/: metadata.json
22/a4b43982c9/: metadata.json
22/b5149a83c7/: metadata.json
22/bc6881d498/: metadata.json
22/e873c835d2/: metadata.json
23/2a0fdcb720/: metadata.json
23/b097fdc53e/: metadata.json
23/bd9c634ca9/: metadata.json
24/3b38334f70/: metadata.json
24/95a459f106/: metadata.json
25/0dc840f65f/: metadata.json
25/9bc5674060/: metadata.json
25/c5d379b917/: metadata.json
backend/: Dockerfile  alembic.ini  requirements-dev.txt  requirements-mutation.txt  requirements-tooling.txt  requirements-typecheck.txt  requirements.txt
context/: DataQ_Management_Presentation.pptx  DataQ_platform_roadmap.md  README.md  post-v1-roadmap.md
deploy/: .env.app.prod.example  README.md
docs/: api-keys.md  architecture.md  best-practices.md  changelog.md  compliance-posture.md  concepts.md  contributing.md  datasources-checks.md  deployment.md  feature-matrix.md  features.md  getting-started.md  glossary.md  index.md  mcp-setup.md  notifications.md  observability.md  orchestration.md  perf-baseline-snowflake.md  perf-baseline.md  post-v1-admin-ui-notes.md  post-v1-assets-lineage-incidents-notes.md  post-v1-dq-intelligence-notes.md  progress-v1.md  progress.md  recommended-usage.md  rest-api.md  retro-v1.md  runbook-faq.md  scheduling.md  security.md  troubleshooting.md  tutorial.md
frontend/: .prettierignore  Dockerfile  eslint.config.cjs  index.html  nginx.conf  nginx.conf.template  package.json  playwright.config.ts  pnpm-lock.yaml  staticwebapp.config.json  stryker.conf.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: check-typecheck-deps.py  reset_dev_db.sh  setup.sh  test-backend.sh
(+4723 files in other folders)
