[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.backends.legacy:build"

# ── Black ────────────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security — basic subset; full scan via Bandit)
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",  # assert statements are fine in tests
    "S104",  # binding to 0.0.0.0 is intentional in Docker
    "B008",  # FastAPI Depends() in function args is idiomatic
]
# The format-on-save hook runs `ruff check --fix`. Auto-deleting unused imports
# (F401) mid-edit — when an import is briefly unused between adding it and adding
# its first use — corrupts multi-step edits. Keep F401 *reported* (so genuinely
# unused imports still fail CI) but never auto-removed. Same for unused locals.
unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S", "N802"]  # relax security + naming in tests
"backend/alembic/**" = ["N999"]     # migration files use non-PEP8 names

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "great_expectations.*",
    "celery.*",
    "opencensus.*",
    "snowflake.*",
    "databricks.*",
    "azure.storage.*",
    "azure.core.*",
    "azure.identity",
    "azure.keyvault.*",
    "boto3.*",
    "botocore.*",
    "pandas",
    "pandas.*",
    "croniter",
]
ignore_missing_imports = true
# These third-party libs expose public API via internal modules without an explicit
# __all__ (e.g. great_expectations.expectations.ExpectColumnValuesToNotBeNull), so
# strict mode's no-implicit-reexport would flag legitimate imports/attribute access.
implicit_reexport = true

# pyarrow ships a partial py.typed, so when it's installed (dev env) mypy flags
# its untyped calls (e.g. ParquetFile), but it's absent from the slim CI
# typecheck deps. follow_imports = "skip" forces it to Any in *both* envs, so the
# code type-checks identically with or without pyarrow installed.
# Same treatment for the OTel span stack (tracing.py, A3): typed (py.typed) but
# absent from the slim typecheck deps.
[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*", "opentelemetry.*", "azure.monitor.*"]
follow_imports = "skip"
ignore_missing_imports = true

# ── pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
# The Week-8 exit gate: the run fails if backend/app line coverage drops below
# 80% (baseline at flip time: 96%). Applies to every pytest run, local and CI.
# Use --no-cov for a quick single-file loop.
addopts = "--cov=backend/app --cov-report=term-missing --cov-fail-under=80"
markers = [
    "real_dispatch: opt out of the autouse run_dispatch stub (test dispatch_run itself)",
]
# Silence UPSTREAM deprecations we can't fix here — scoped by message so a new warning
# from our own code still surfaces. All resolve on a dependency upgrade (or the OTel
# migration off opencensus, ADR 0010); none are DataQ bugs. (Our one own use of the
# deprecated Starlette 422 constant was fixed in core/errors.py.)
filterwarnings = [
    "ignore:datetime.datetime.utcnow.. is deprecated:DeprecationWarning",              # opencensus
    "ignore:'locale.getdefaultlocale' is deprecated:DeprecationWarning",               # opencensus
    "ignore:Using .httpx. with .starlette.testclient. is deprecated",                  # fastapi TestClient
    "ignore:Implicitly cleaning up <TemporaryDirectory:ResourceWarning",               # great_expectations ephemeral context
]

# ── Bandit ───────────────────────────────────────────────────────────────────

[tool.bandit]
targets = ["backend/app"]
exclude_dirs = ["backend/tests", "backend/alembic"]
skips = ["B101"]  # assert is fine in non-production code

# ── mutmut (mutation spikes) ─────────────────────────────────────────────────
# Manual/periodic, NOT a CI gate (CONTRIBUTING rule 4a). mutmut 3.x copies the
# tree into ./mutants/, chdir's in, and runs pytest there — so `also_copy` must
# bring the whole importable package + tests + this config, and `-o addopts=`
# strips the repo's --cov flags (mutmut runs its own coverage plugin; a second
# --cov is a pytest usage error in-process). Per-spike: point `source_paths` at
# the one module you're spiking and narrow the test selection to its tests.
[tool.mutmut]
source_paths = ["backend/app/services/dashboard_service.py"]
also_copy = ["backend", "pyproject.toml"]
pytest_add_cli_args_test_selection = ["backend/tests/services/test_dashboard_service.py"]
pytest_add_cli_args = ["-o", "addopts="]
